--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "author": "Genadi Tsolov",
   "license": "ISC",
   "dependencies": {
+    "argon2": "^0.28.7",
+    "ejs": "^3.1.8",
     "express": "^4.18.1",
     "nodemailer": "^6.7.7",
-    "pug": "^3.0.2"
+    "pg": "^8.7.3",
+    "pug": "^3.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/node": "^18.0.3",
